--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.speedata:deivice:1.4.7'
     compile 'com.speedata:psam:1.4.4'
+    compile 'com.speedata:FingerPrint:1.3.3'
 }
